# rig

./: .dir-locals.el  AGENTS.md  CMakeLists.txt  Makefile  README.md
cmake/scripts/: build_embedded_module.lua  embed_lua_module.cmake
docs/notes/: 2026-05-18-jitter-diagnosis.md
examples/: ants.lua  keylogger.fnl  keylogger.lua  renderer_baseline.lua  scroller.lua  spinning_cube.lua  spinning_cube_gl.lua
examples/baseline/: README.md  gl_baseline.lua  renderer_baseline.lua
scripts/: build_embedded_module.lua  generate_module_registry.lua  run_all_tests.lua
src/: main.c  runtime.c  runtime.h
src/modules/: README.md  animator.lua  animator.md  color.lua  color.md  core.c  core.lua  dl.c  dl.lua  dl.md  dxc.lua  dxc.md  font.lua  font.md  freetype.c  freetype.lua  freetype.md  gl.c  gl.lua  gl.md  glx.lua  glx.md  harfbuzz.c  harfbuzz.lua  harfbuzz.md  math3d.lua  math3d.md  mathx.lua  mathx.md  mesh.lua  mesh.md  mesh3d.lua  mesh3d.md  modules.cmake  modules.txt  oop.lua  oop.md  platform.lua  platform.md  prelude.lua  (+38 more)
tests/: animator_test.lua  class_test.lua  color_test.lua  dl_test.lua  dxc_test.lua  fennel_test.fnl  font_test.lua  freetype_test.lua  gl_test.lua  glx_test.lua  harfbuzz_test.lua  mathx_test.lua  mesh3d_test.lua  mesh_test.lua  oop_test.lua  platform_test.lua  prelude_test.lua  profiler_test.lua  repr_test.lua  rig_basics_test.lua  rig_test.lua  run_all_tests.lua  scenegraph_test.lua  sched_test.lua  schema_test.lua  sdl3_test.lua  sdl3_time_test.lua  sdl3x_test.lua  shader_test.lua  shaderc_test.lua  shadercross_test.lua  stat_test.lua  test_test.lua  time_test.lua  uv_test.lua  windows_test.lua
